# sep-41-token

./: Cargo.toml
mock-sep-41/: Cargo.toml
mock-sep-41/src/: contract.rs  test.rs
sep-41/: Cargo.toml
sep-41/src/testutils/: mock_sep_41_token.wasm
